Pause reminders functionality

--- a/frontend/src/app/features/user-preferences/reminder-settings/page/reminder-settings-page.component.html
+++ b/frontend/src/app/features/user-preferences/reminder-settings/page/reminder-settings-page.component.html
@@ -24,6 +24,9 @@
     <op-workdays-settings></op-workdays-settings>
   </section>
   <section class="form--section">
+    <op-pause-reminders></op-pause-reminders>
+  </section>
+  <section class="form--section">
     <h5 [textContent]="text.alerts.title"></h5>
     <p [textContent]="text.alerts.explanation"></p>
     <op-email-alerts-settings></op-email-alerts-settings>
